<resources>
    <string name="app_name">MobileProject</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="title_home">Home</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_shopping">Shopping</string>
    <string name="title_account">Conta</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_gallery">Galeria</string>
    <string name="title_historic">Historico</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Fazer Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="bem_vindo">"Bem vindo(a)"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bnt_cancel">Cancelar</string>
</resources>